--- a/amazon.html
+++ b/amazon.html
@@ -34,12 +34,19 @@
             </div>
             
             <div id="bar2">
+
                 <div class="bar2-left">
-                    <span class="material-icons">
-                    menu
-                    모두
-                    </span>
-                </div>
+                    <div id="btn--open" class="material-icons">
+                        menu
+                        모두
+                    </div>
+                    <!-- 닫는 아이콘 -->
+                    <div id="btn--close" class="material-icons">
+                        close
+                    </div>
+                        <!-- 사이드 메뉴 -->
+                    <nav id="side__menu"></nav>
+
                 <div class="bar2-middle">
                     <div id="divide_bar2">
                         <a>오늘의 거래</a>
