arranged header and added footer

--- a/amazon.html
+++ b/amazon.html
@@ -23,10 +23,12 @@
 <body>
         <header id="main-bar">
             <div id="bar1">
-                <div class="bar1-left"></div>
+                <div class="bar1-left">
+                    Amazon 아마존
+                </div>
                 <div class="bar1-middle">
                     <span class="material-icons">
-                        search
+                        검색 search
                     </span>
                 </div>
                 
@@ -47,21 +49,49 @@
                     </div>
                     
                     <!-- 사이드 메뉴 -->
-                    <nav id="side__menu"></nav>
+                    <nav id="side__menu">
+                        <p>디지털 콘텐츠 및 기기</p>
+                        <p>디지털 쇼핑</p>
+                        <p>프로그램 및 기능</p>
+                        <p>도움말 및 설정</p>
+                    </nav>
 
                 <div class="bar2-middle">
                     <div id="divide_bar2">
-                        <a>오늘의 거래</a>
-                        <a>고객서비스</a>
-                        <a>기프트 카드</a>
-                        <a>팔다</a>
-                        <a>레지스트리</a>
+                        <a href="https://www.amazon.com/-/ko/international-sales-offers/b/?ie=UTF8&node=15529609011&ref_=nav_cs_gb_intl_52df97a2eee74206a8343034e85cd058">
+                            오늘의 딜</a>
+                        <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=508510&ref_=nav_cs_customerservice_2bf4fe8c5ec54e6bae2d1c24043f012b">
+                            고객서비스</a>
+                        <a href="https://www.amazon.com/-/ko/gift-cards/b/?ie=UTF8&node=2238192011&ref_=nav_cs_gc_4fb606b1a14b44e4823e00c03fc71f47">
+                            기프트 카드</a>
+                        <a href="https://www.amazon.com/-/ko/b/?_encoding=UTF8&ld=AZUSSOA-sell&node=12766669011&ref_=nav_cs_sell_9321d964d1ab428b8d83e204c043fc01">
+                            판매</a>
+                        <a href="https://www.amazon.com/registries?_encoding=UTF8&language=ko&redirect=true&ref_=nav_cs_registry_1c421982e26d4ec48ca364be68f201b5">
+                            레지스트리</a>
                     </div>
                 </div>
                 <div class="bar2-right">
-                    <p> 기타</p>
+                    <a href="https://www.amazon.com/-/ko/gp/customer-preferences/select-currency/?ie=UTF8&ref_=nav_swm_undefined&pf_rd_p=bc0f93df-39b0-41b8-a23f-3b2727aaad75&pf_rd_s=nav-sitewide-msg-text-export&pf_rd_t=4201&pf_rd_i=navbar-4201&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=YQNM2F712AZ9R6B4AVZ3">
+                        click here to change language </a>
                 </div>
             </div>
         </header>
+
+        <footer id="footer">
+            <div id="footer1">
+
+            </div>
+            <div id="footer2">
+                <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=508088&ref_=footer_cou">
+                이용약관</a>
+                <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=468496&ref_=footer_privacy">
+                    개인정보 취급 고지
+                </a>
+                <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=202075050&language=ko">
+                    관심 기반 광고
+                </a>
+            </div>
+
+        </footer>
 </body>
 </html>
