--- a/amazon.html
+++ b/amazon.html
@@ -79,6 +79,15 @@
 
         <footer id="footer">
             <div id="footer1">
+                <li>
+                    Amazon에 대해 알아보기
+                </li>
+                <li>
+                    Amazon과 함께 돈 벌기
+                </li>
+                <li>
+                    Amazon 결제 제품
+                </li>
 
             </div>
             <div id="footer2">
