--- a/amazon.html
+++ b/amazon.html
@@ -27,9 +27,14 @@
                     Amazon 아마존
                 </div>
                 <div class="bar1-middle">
-                    <span class="material-icons">
-                        검색 search
-                    </span>
+                    <!-- 검색 아이콘 -->
+                    <div class="search">
+                        <input id="search__box" placeholder="검색어를 입력하시오" />
+                        <!-- 검색 아이콘 -->
+                        <span class="material-icons">
+                            검색 search
+                        </span>
+                    </div>
                 </div>
                 
                 <div class="bar1-right"></div>
@@ -50,10 +55,68 @@
                     
                     <!-- 사이드 메뉴 -->
                     <nav id="side__menu">
-                        <p>디지털 콘텐츠 및 기기</p>
-                        <p>디지털 쇼핑</p>
-                        <p>프로그램 및 기능</p>
-                        <p>도움말 및 설정</p>
+                        <li class="item">
+                            <div class="item__title">
+                                <div class="item__name">디지털 콘텐츠 및 기기</div>
+                                <span class="material-icons-outlined">
+                                    keyboard_arrow_right
+                                </span>
+                            </div>
+                            <div class="item__contents">
+                                <ul>
+                                    <li>Amazon Music</li>
+                                    <li>안드로이드 앱스토어</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="item__title">
+                                <div class="item__name">부서별 쇼핑</div>
+                                <span class="material-icons-outlined">
+                                    keyboard_arrow_right
+                                </span>
+                            </div>
+                            <div class="item__contents">
+                                <ul>
+                                    <li>전자</li>
+                                    <li>컴퓨터</li>
+                                    <li>예술 밑 공예</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="item__title">
+                                <div class="item__name">프로그램 및 기능</div>
+                                <span class="material-icons-outlined">
+                                    keyboard_arrow_right
+                                </span>
+                            </div>
+                            <div class="item__contents">
+                                <ul>
+                                    <li>키프트 카드</li>
+                                    <li>Amazon Live</li>
+                                    <li>해외 쇼핑</li>
+                                    <li>모두 보기</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="item">
+                            <div class="item__title">
+                                <div class="item__name">도움말 및 설정</div>
+                                <span class="material-icons-outlined">
+                                    keyboard_arrow_right
+                                </span>
+                            </div>
+                            <div class="item__contents">
+                                <ul>
+                                    <li>계정</li>
+                                    <li>한국어</li>
+                                    <li>customer Service</li>
+                                    <li>로그인</li>
+                                </ul>
+                            </div>
+                        </li>
+
                     </nav>
 
                 <div class="bar2-middle">
