added popAlert when clicking the logo

--- a/main.html
+++ b/main.html
@@ -32,8 +32,10 @@
                     <!-- 로고 이미지 -->
                     <!-- 클릭하면 홈으로 이동하는 링크가 걸려있습니다 -->
                     <div class="logo">
-                        <a href="./amazon.html" class="logo">
-                            <img src="./images/logo.jpeg" alt="로고">
+                        <a href="./main.html" class="logo">
+                            <p onclick="popAlert()">
+                                <img src="./images/logo.jpeg" alt="로고"> 
+                            </p>
                         </a>
                     </div>
                     
