--- a/html/delivery.html
+++ b/html/delivery.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>배송지</title>
+    <!--CSS와 js와 연결-->
+    <link rel="stylesheet" href="./css/delivery.css">
+    <script defer src="./js/delivery.js"></script>
 </head>
 <body>
     
