--- a/html/signin.html
+++ b/html/signin.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
+    <!--CSS와 js와 연결-->
+    <link rel="stylesheet" href="./css/signin.css">
+    <script defer src="./js/signin.js"></script>
 </head>
 <body>
     
