--- a/index.html
+++ b/index.html
@@ -213,6 +213,53 @@
         
         <!-- MAIN SECTION -->
         <section class="wrapper">
+            <div id="slider">
+                <div class="material-icons arrow--left">
+                    arrow_left
+                </div>
+                <div class="slide slide1">
+                    <div class="slide__content">
+                        <span>slide1</span>
+                    </div>
+                </div>
+                <div class="slide slide2">
+                    <div class="slide__content">
+                        <span>slide2</span>
+                    </div>
+                </div>
+                <div class="slide slide3">
+                    <div class="slide__content">
+                        <span>slide3</span>
+                    </div>
+                </div>
+                <div class="slide slide4">
+                    <div class="slide__content">
+                        <span>slide4</span>
+                    </div>
+                </div>
+                <div class="slide slide5">
+                    <div class="slide__content">
+                        <span>slide5</span>
+                    </div>
+                </div>
+                <div class="slide slide6">
+                    <div class="slide__content">
+                        <span>slide6</span>
+                    </div>
+                </div>
+                <div class="material-icons arrow--right">
+                    arrow_right
+                </div>
+                <div class="dots">
+                    <div class="dot dot1"></div>
+                    <div class="dot dot2"></div>
+                    <div class="dot dot3"></div>
+                    <div class="dot dot4"></div>
+                    <div class="dot dot5"></div>
+                    <div class="dot dot6"></div>
+                </div>
+            </div> 
+
             <aside id="left"></aside>
             <main>
             <div id="large"></div>
