--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <!--구글 아이콘-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Asearch">
-    <!--CSS와 js와 연결-->
+    <!--CSS와 연결-->
     <link rel="stylesheet" href="./css/main.css">
+    <!--js와 연결-->
     <script defer src="./js/main.js"></script>
 </head>
 <body>
