--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         close
                     </div>
                     
-                    <!-- 사이드 메뉴(햄버거바 안의 내용) -->
+                    <!-- 사이드 메뉴(햄버거바 누르면 뜨는 사이드바) -->
                     <nav id="side__menu">
                         <!-- 사이드 메뉴1 -->
                         <li class="item">
