--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <!-- MAIN SECTION -->
     <main>
     <!-- 콘텐츠 영역을 잡아주는 inner -->
-    <div class="inner">
+    <div id="inner">
         <!-- 수평 슬라이더 -->
         <div id="slider">
             <!-- 왼쪽 화살표 -->
@@ -235,6 +235,7 @@
             </div>
             <!-- 슬라이드 이미지들 -->
             <div class="slide slide1">
+                 <!-- 이미지 내 내용 -->
                 <div class="slide__content">
                 </div>
             </div>
@@ -334,13 +335,13 @@
             <div id="footer2">
                 <!--기존 아마존 사이트와 연결 -->
                 <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=508088&ref_=footer_cou">
-                    이용약관
+                    / 이용약관 /
                 </a>
                 <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=468496&ref_=footer_privacy">
-                    개인정보 취급 고지
+                    / 개인정보 취급 고지 /
                 </a>
                 <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=202075050&language=ko">
-                    관심 기반 광고
+                    / 관심 기반 광고 /
                 </a>
             </div>
 
