--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@
             <div id="footer2">
                 <!--기존 아마존 사이트와 연결 -->
                 <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=508088&ref_=footer_cou">
-                    / 이용약관 /
+                    // 이용약관 /
                 </a>
                 <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=468496&ref_=footer_privacy">
                     / 개인정보 취급 고지 /
                 </a>
                 <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=202075050&language=ko">
-                    / 관심 기반 광고 /
+                    / 관심 기반 광고 //
                 </a>
             </div>
 
