부수 페이지 구분

--- a/html/login.html
+++ b/html/login.html
@@ -10,6 +10,25 @@
     <script defer src="./js/login.js"></script>
 </head>
 <body>
-    
+    <p>로그인하는 사이트 </p>
+    <!-- HEADER -->
+    <header id="main-bar">
+
+            <!-- bar left -->
+            <div id="bar-left">                    
+                <!-- 로고 이미지 -->
+                <div class="logo">
+                    <!-- 로고를 클릭하면 홈으로 이동하는 링크가 걸려있습니다 -->
+                    <a href="./index.html" class="logo">
+                    <!-- 클릭하면 popAlert가 뜨도록 되어있습니다 -->
+                        <p onclick="popAlert()">
+                        <!-- 로고 이미지 삽입, image파일에 존재하는 logo,jpeg와 연결-->
+                            <img src="./images/logo.jpeg" alt="로고"> 
+                        </p>
+                    </a>
+                </div>      
+            </div>        
+    </header>
 </body>
+
 </html>
