--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
                     <!-- 로고 이미지 -->
                     <div class="logo">
                         <!-- 로고를 클릭하면 홈으로 이동하는 링크가 걸려있습니다 -->
-                        <a href="./index.html" class="logo">
+                        <a href="./html/login.html" class="logo">
                             <!-- 클릭하면 popAlert가 뜨도록 되어있습니다 -->
                             <p onclick="popAlert()">
                                 <!-- 로고 이미지 삽입, image파일에 존재하는 logo,jpeg와 연결-->
                                 <img src="./images/logo.jpeg" alt="로고"> 
                             </p>
+
                         </a>
                     </div>
                     
@@ -53,9 +54,10 @@
                         <input class="search__box" placeholder="검색어를 입력하시오" />
                         <!-- 검색 아이콘 -->
                         <span class="material-icons">
-                            검색
+                            search
                         </span>
                     </div>
+
                 </div>
                 
                 <!-- bar1 right -->
