--- a/index.html
+++ b/index.html
@@ -195,18 +195,18 @@
                 <div id="bar2-middle">
                         <!-- bar2 middle는 모든 기존 amazon페이지와 연결-->
                         <a href="https://www.amazon.com/-/ko/international-sales-offers/b/?ie=UTF8&node=15529609011&ref_=nav_cs_gb_intl_52df97a2eee74206a8343034e85cd058">
-                            | 오늘의 딜 |                      </a>
+                            [ 오늘의 딜 ]                      </a>
                         <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=508510&ref_=nav_cs_customerservice_2bf4fe8c5ec54e6bae2d1c24043f012b">
-                            | 고객서비스 |
+                            [ 고객서비스 ]
                         </a>
                         <a href="https://www.amazon.com/-/ko/gift-cards/b/?ie=UTF8&node=2238192011&ref_=nav_cs_gc_4fb606b1a14b44e4823e00c03fc71f47">
-                            | 기프트 카드 |
+                            [ 기프트 카드 ]
                         </a>                    
                         <a href="https://www.amazon.com/-/ko/b/?_encoding=UTF8&ld=AZUSSOA-sell&node=12766669011&ref_=nav_cs_sell_9321d964d1ab428b8d83e204c043fc01">
-                            | 판매 |
+                            [ 판매 ]
                         </a>
                         <a href="https://www.amazon.com/registries?_encoding=UTF8&language=ko&redirect=true&ref_=nav_cs_registry_1c421982e26d4ec48ca364be68f201b5">
-                            | 레지스트리 |
+                            [ 레지스트리 ]
                         </a>
                                     
                 </div>
@@ -341,13 +341,12 @@
             <div id="footer2">
                 <!--기존 아마존 사이트와 연결 -->
                 <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=508088&ref_=footer_cou">
-                    // 이용약관 /
-                </a>
+                    [ 이용약관 ] |                 </a>
                 <a href="https://www.amazon.com/-/ko/gp/help/customer/display.html?nodeId=468496&ref_=footer_privacy">
-                    / 개인정보 취급 고지 /
+                    [ 개인정보 취급 고지 ] |
                 </a>
                 <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=202075050&language=ko">
-                    / 관심 기반 광고 //
+                    [ 관심 기반 광고 ]
                 </a>
             </div>
 
